<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingBottom="@dimen/activity_vertical_margin">

    <LinearLayout
        android:id="@+id/timeFrame"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="horizontal">

        <TextView
            style="@style/styleTheme"
            android:layout_weight="3"
            android:text="@string/game_Duration" />

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:orientation="vertical">

            <SeekBar
                android:id="@+id/gameDurationSeek"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:max="199" />

            <TextView
                android:id="@+id/gameDurationText"
                style="@style/styleTheme"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center" />
        </LinearLayout>


    </LinearLayout>


    <LinearLayout
        android:id="@+id/tdFrame"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="horizontal">


        <TextView
            style="@style/styleTheme"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:text="@string/target_duration" />

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:orientation="vertical">

            <SeekBar
                android:id="@+id/targetDurationSeek"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:max="199" />

            <TextView
                android:id="@+id/targetDurationText"
                style="@style/styleTheme"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/tsFrame"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="horizontal">

        <TextView
            style="@style/styleTheme"
            android:layout_weight="3"
            android:text="@string/target_size" />

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:orientation="vertical">

            <SeekBar
                android:id="@+id/targetSizeSeek"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:max="120" />

            <TextView
                android:id="@+id/targetSizeText"
                style="@style/styleTheme"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/tpsFrame"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="horizontal">

        <TextView
            style="@style/styleTheme"
            android:layout_weight="3"
            android:text="@string/target_per_second" />

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:orientation="vertical">

            <SeekBar
                android:id="@+id/targetPerSecondSeek"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:max="180" />

            <TextView
                android:id="@+id/targetPerSecondText"
                style="@style/styleTheme"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="120dp"
        android:layout_weight="1"
        android:orientation="horizontal">

        <LinearLayout
            android:id="@+id/checkFrame"
            android:layout_width="160dp"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <CheckBox
                android:id="@+id/randomBox"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/randomize_spawn_time"
                android:textSize="15sp" />

            <CheckBox
                android:id="@+id/respawnBox"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/instant_respawn_time"
                android:textSize="15sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">

            <Button
                android:id="@+id/startButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/start"
                android:textSize="17sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <Button
                        android:id="@+id/bronzeButton"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/bronze"
                        android:textSize="17sp" />

                    <Button
                        android:id="@+id/bronzeLeaderButton"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/lb"
                        android:textSize="17sp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <Button
                        android:id="@+id/silverButton"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/silver"
                        android:textSize="17sp" />

                    <Button
                        android:id="@+id/silverLeaderButton"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/lb"
                        android:textSize="17sp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <Button
                        android:id="@+id/goldButton"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/gold"
                        android:textSize="17sp" />

                    <Button
                        android:id="@+id/goldLeaderButton"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/lb"
                        android:textSize="17sp" />
                </LinearLayout>
            </LinearLayout>

            <ImageView
                android:id="@+id/targetPreview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

        </LinearLayout>

        <ImageView
            android:id="@+id/targetView"
            android:layout_width="160px"
            android:layout_height="160px"
            android:src="@drawable/target" />
    </LinearLayout>

</LinearLayout>